--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^22.4.0",
     "axios": "^1.7.4",
     "express": "^4.19.2",
+    "redis": "^4.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   }
