feat: code coverage and data merger test

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ node_modules/
 # Lock files
 package-lock.json
 yarn.lock
-pnpm-lock.yaml
 
 # TypeScript compiled files
 dist/
+
+#coverage
+coverage/
