--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.4"
   }
 }
