--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/redis-mock": "^0.17.3",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "redis-mock": "^0.56.3",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.4"
   }
