--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node dist/app.js",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
-    "test": "jest",
+    "test": "jest --testPathIgnorePatterns=\"/tests/integration/\"",
+    "test:integration": "npm run docker:up && jest --runInBand --testPathPattern=tests/integration && npm run docker:down",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
     "coverage": "jest --coverage"
   },
   "keywords": [],
